<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.UserSettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_txt_zip_code"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/et_zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/et_hint_enter_your_zip_code"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_txt_select_unit_of_measurement"
        android:layout_marginTop="15dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rb_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_txt_celsius" />

        <RadioButton
            android:id="@+id/rb_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_txt_fahrenheit" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_save"/>

</LinearLayout>